<resources>
    <string name="app_name">Do It</string>

    <integer name="TIEMPO_SPLASH_SCREEN">3000</integer>
    <string name="title_activity_navegacion">Navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Nombres header nav -->
    <string name="nav_header_title">SISTEMA DE AGENDA</string>
    <string name="nav_email">EMAIL</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Nombres de cada ventana -->
    <string name="menu_citas">EVENTOS</string>
    <string name="menu_tareas">TAREAS</string>
    <string name="menu_acerca_de">ACERCA DE</string>
    <string name="chat">CHAT</string>
    <string name="groups">GRUPOS</string>
    <string name="exportar_db">EXPORTAR AGENDA</string>
    <string name="importar_db">IMPORTAR AGENDA</string>
    <string name="cerrar_sesion">CERRAR SESION</string>


    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="about">Do It! es una aplicación para dispositivos móviles, donde el usuario puede crear recordatorios donde introduce: la hora, la fecha, el asunto, y una breve descripción de la tarea.  Además, la app permite visualizar una notificación, tiempo antes de que se cumpla el límite establecido para recordar al usuario de una tarea o evento.</string>
    <string name="acerca_de">Acerca de</string>
    <string name="valuesY">Resultants</string>




    <!--
    Strings del tutorial
    -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5">Tab 5</string>


</resources>
