<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_citas">

    <fragment
        android:id="@+id/nav_citas"
        android:name="com.xcheko51x.agendacitas.ui.citas.CitasFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_citas" />

    <fragment
        android:id="@+id/nav_tareas"
        android:name="com.xcheko51x.agendacitas.ui.tareas.TareasFragment"
        android:label="@string/menu_tareas"
        tools:layout="@layout/fragment_tareas" />

    <fragment
        android:id="@+id/nav_acerca_de"
        android:name="com.xcheko51x.agendacitas.ui.acercade.AcercaDeFragment"
        android:label="@string/menu_acerca_de"
        tools:layout="@layout/fragment_acerca_de" />

    <fragment
        android:id="@+id/nav_exportar_db"
        android:name="com.xcheko51x.agendacitas.ui.AccionesDB.ExportarDBFragment"
        android:label="@string/exportar_db"
        tools:layout="@layout/fragment_exportar_db" />

    <fragment
        android:id="@+id/nav_importar_db"
        android:name="com.xcheko51x.agendacitas.ui.AccionesDB.ImportarDBFragment"
        android:label="@string/importar_db"
        tools:layout="@layout/fragment_importar_db" />


</navigation>